Regression: Adding Camera background image immediately pops an "Image not found" error #98875

Closed
opened 2022-06-14 09:40:32 +02:00 by Jesse Yurkovich · 10 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-13 22:31, hash: 77b34a00f9

Seems caused by b0da080c2c

Short description of error
Adding a Camera background image immediately pops an "Image not found" error before the user even has a chance to try to load an image.

Exact steps for others to reproduce the error

  • Load default scene
  • Select Camera and go to its properties
  • Attempt to add a background image
  • Observe error as soon as you click the "Add image" button

A bisect pointed to the above commit as the culprit. Reverting it does indeed solve the problem.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-13 22:31, hash: `77b34a00f9` Seems caused by b0da080c2c **Short description of error** Adding a Camera background image immediately pops an "Image not found" error before the user even has a chance to try to load an image. **Exact steps for others to reproduce the error** - Load default scene - Select Camera and go to its properties - Attempt to add a background image - Observe error as soon as you click the "Add image" button A bisect pointed to the above commit as the culprit. Reverting it does indeed solve the problem.
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

b0da080c2c confirmed as culprit.

@JulianEisel: it is a bit unfortunate that background_image_add_invoke uses WM_operator_drop_load_path (in a way background expects this can fail), maybe this particular situation needs to be tweaked to not throw an error, or something else should be used from background_image_add_invoke?

In any case, will set to High prio for now since it is a regression...

b0da080c2cb9 confirmed as culprit. @JulianEisel: it is a bit unfortunate that `background_image_add_invoke` uses `WM_operator_drop_load_path` (in a way background expects this can fail), maybe this particular situation needs to be tweaked to not throw an error, or something else should be used from `background_image_add_invoke`? In any case, will set to High prio for now since it is a regression...
Philipp Oeser changed title from Adding Camera background image immediately pops an "Image not found" error to Regression: Adding Camera background image immediately pops an "Image not found" error 2022-06-14 10:28:01 +02:00

This issue was referenced by b690f4c2e6

This issue was referenced by b690f4c2e6d02af522cebadb71318e14299dc362
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-06-14 17:07:53 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

@JulianEisel hi, I'm seeing that you've mentioned this fix for corrective release. However error did not show up for me in 3.2 release
Also the responsible commit was only pushed to master
Can you check again in 3.2 and remove the fix from corrective release list?

@JulianEisel hi, I'm seeing that you've mentioned this fix for corrective release. However error did not show up for me in 3.2 release Also the responsible commit was only pushed to master Can you check again in 3.2 and remove the fix from corrective release list?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98875
No description provided.