source/blender/windowmanager/intern/wm_operators.c
@@ -1308,6 +1308,10 @@ ID *WM_operator_drop_load_path(struct bContext *C, wmOperator *op, const short i
     return id;
   }
 
+  if (!WM_operator_properties_id_lookup_is_set(op->ptr)) {
+    return NULL;
+  }
+
   /* Lookup an already existing ID. */
   id = WM_operator_properties_id_lookup_from_name_or_session_uuid(bmain, op->ptr, idcode);
 
